RESOLVED FIXED299723
REGRESSION(298889@main): [WPE][GTK] Broke WebRTC event logging
https://bugs.webkit.org/show_bug.cgi?id=299723
Summary REGRESSION(298889@main): [WPE][GTK] Broke WebRTC event logging
Philippe Normand
Reported 2025-09-29 03:09:03 PDT
,
Attachments
Philippe Normand
Comment 1 2025-09-29 03:17:05 PDT
EWS
Comment 2 2025-09-30 00:47:38 PDT
Committed 300739@main (eb10357f7696): <https://commits.webkit.org/300739@main> Reviewed commits have been landed. Closing PR #51495 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-09-30 00:49:44 PDT
Note You need to log in before you can comment on or make changes to this bug.