REGRESSION(298889@main): [WPE][GTK] Broke WebRTC event logging https://bugs.webkit.org/show_bug.cgi?id=299723

Reviewed by Xabier Rodriguez-Calvar.

In 298889@main the log site identifiers format changed from hexadecimal to plain uint64_t, which
broke WebRTC event logging in the WPE and GTK ports. So adapt our code accordingly using this new
format.

* Source/WebCore/Modules/mediastream/PeerConnectionBackend.cpp:
(WebCore::PeerConnectionBackend::handleLogMessage):
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerPeerConnectionBackend.cpp:
(WebCore::GStreamerPeerConnectionBackend::GStreamerPeerConnectionBackend):
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::createGSTPlayBin):

Canonical link: https://commits.webkit.org/300739@main